--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "consolidate": "~0.13.1",
     "cookie-parser": "^1.3.2",
     "crypto": "0.0.3",
+    "danger-plugin-jest": "^1.0.1",
+    "danger-plugin-yarn": "^1.3.1",
     "express": "^4.13.1",
     "express-session": "^1.11.3",
     "forever": "~0.14.2",
